<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.example.quantumdynamics.ui.dashboard.viewmodel.DashboardViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="@{vm.isButtonContainer ? View.VISIBLE : View.GONE}"
            tools:visibility="gone">

            <Button
                android:id="@+id/button_open_camera"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_15dp"
                android:onClick="@{() -> vm.onCameraClicked()}"
                android:padding="@dimen/_10dp"
                android:text="@string/open_camera"
                android:textSize="@dimen/_18sp"
                app:layout_constraintBottom_toTopOf="@id/button_show_system_specs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Open Camera" />

            <Button
                android:id="@+id/button_show_system_specs"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_15dp"
                android:onClick="@{() -> vm.showSystemSpecs()}"
                android:padding="@dimen/_10dp"
                android:text="@string/show_system_specs"
                android:textSize="@dimen/_18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Show System Specs" />

            <Button
                android:id="@+id/button_exit"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_15dp"
                android:onClick="@{() -> vm.onExitClick()}"
                android:padding="@dimen/_10dp"
                android:text="@string/close_the_app"
                android:textSize="@dimen/_18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_show_system_specs"
                tools:text="Close the App" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/output_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{!vm.isButtonContainer ? View.VISIBLE : View.GONE}">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_0dp"
                app:layout_constraintBottom_toTopOf="@id/go_to_buttons"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image"
                    android:src="@{vm.imageUri}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10dp"
                    android:visibility="@{vm.cameraButtonClicked ? View.VISIBLE : View.GONE}" />

                <LinearLayout
                    android:id="@+id/system_specs_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10dp"
                    android:gravity="center|start"
                    android:orientation="vertical"
                    android:visibility="@{!vm.cameraButtonClicked ? View.VISIBLE : View.GONE}">

                    <TextView
                        android:id="@+id/deviceModelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.systemSpecs.deviceModel}"
                        android:textSize="@dimen/_20sp"
                        tools:text="Device Model: model" />

                    <TextView
                        android:id="@+id/androidVersionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.systemSpecs.androidVersion}"
                        android:textSize="@dimen/_20sp"
                        tools:text="Android Version: version" />

                    <TextView
                        android:id="@+id/processorDetailsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.systemSpecs.processorDetails}"
                        android:textSize="@dimen/_20sp"
                        tools:text="Processor Details: processor" />

                    <TextView
                        android:id="@+id/ramDetailsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.systemSpecs.ramDetails}"
                        android:textSize="@dimen/_20sp"
                        tools:text="Ram Details: Ram" />

                    <TextView
                        android:id="@+id/storageCapacityTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.systemSpecs.storageCapacity}"
                        android:textSize="@dimen/_20sp"
                        tools:text="Storage Capacity: storage" />

                </LinearLayout>

            </FrameLayout>

            <Button
                android:id="@+id/go_to_buttons"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_15dp"
                android:onClick="@{() -> vm.onCloseButtonClicked()}"
                android:padding="@dimen/_10dp"
                android:text="@string/back"
                android:textSize="@dimen/_18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Back" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
